<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftIndent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="120dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/juice_type"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMiddle"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTop" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/headerTitle" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeftIndent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/name"
        android:text="@string/juice_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/name"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLeftIndent"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

    <EditText
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeftIndent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/description"
        android:text="@string/juice_description"
        app:layout_constraintBaseline_toBaselineOf="@+id/description"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLeftIndent"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:labelFor="@id/colorSpinner"
        android:text="@string/juice_color"
        app:layout_constraintBaseline_toBaselineOf="@+id/colorSpinner"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLeftIndent"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft" />

    <Spinner
        android:id="@+id/colorSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeftIndent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:labelFor="@id/ratingBar"
        android:text="@string/juice_rating"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/colorSpinner" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rating="3"
        android:stepSize="1"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeftIndent"
        app:layout_constraintTop_toTopOf="@+id/rating" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineMiddle"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/guidelineMiddle"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/saveButton" />
</androidx.constraintlayout.widget.ConstraintLayout>